--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,14 +9,18 @@ on:
 jobs:
 
   tests:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.17.x, 1.18.x]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: ${{ matrix.go-version }}
 
     - name: Unit Test
       run: go test -v ./...
